# usd2gltf

./: .gitignore  LICENSE  README.md  setup.cfg
src/usd2gltf/: cli.py  common.py  converter.py
src/usd2gltf/converters/: usd_camera.py  usd_lux.py  usd_material.py  usd_mesh.py  usd_skel.py  usd_xform.py
tests/: __init__.py  quick_convert.py  test_converter.py  util.py
tests/e2e/: test_converter.py
tests/samples/: model-index.json
tests/samples/box/: box.gltf  box.usda
tests/samples/box_animation/: box_animation.gltf  box_animation.usda
tests/samples/box_color_constant/: box_color_constant.gltf  box_color_constant.usda
tests/samples/box_color_facevarying/: box_color_facevarying.gltf  box_color_facevarying.usda
tests/samples/box_color_vertex/: box_color_vertex.gltf  box_color_vertex.usda
tests/samples/box_material/: box_material.gltf  box_material.usda
tests/samples/box_normals_facevarying/: box_normals_facevarying.gltf  box_normals_facevarying.usda
tests/samples/box_normals_vertex/: box_normals_vertex.gltf  box_normals_vertex.usda
tests/samples/box_point_color/: box_point_color.usda
tests/samples/box_point_normals/: box_point_normals.gltf  box_point_normals.usda
tests/samples/box_subset/: box_subset.gltf  box_subset.usda
tests/samples/box_uv/: box_uv.gltf  box_uv.usda
tests/samples/box_vertex_color/: box_vertex_color.usda
tests/samples/box_vertex_normals/: box_vertex_normals.gltf  box_vertex_normals.usda
tests/samples/camera/: camera.gltf  camera.usda
tests/samples/lights/: lights.gltf  lights.usda
(+6 files in other folders)
