[metadata]
name = usd2gltf
version = 0.0.1
author = Mike Lyndon
author_email = work.mike@pm.me
description = Convert USD to GLTF
long_description = file: README.md
url = https://github.com/mikelyndon/usd2gltf
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independant

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
