[metadata]
name = usd2gltf
version = 0.3.3
author = Mike Lyndon
author_email = work.mike@pm.me
description = Convert USD to GLTF
long_description = file: README.md
url = https://github.com/mikelyndon/usd2gltf
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
  usd-core
  gltflib
  numpy
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
  usd2gltf = usd2gltf.cli:main
